# sanhe_me-project

./: .gitignore  .vercelignore  CLAUDE.md  README.md  README.rst  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  poetry-lock-hash.json  pyproject.toml  requirements-automation.txt  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  requirements.txt  tailwind.config.ts  vercel.json
.claude/: settings.json
.claude/sessions/: 2025-11-02-browser-fingerprinting-rate-limiting-ui-ux-improvements.md  2025-11-02-refactor-action.md  2025-11-02-refactor-todo-list.md
api/: index.py
app/: HomePageContent.tsx  globals.css  layout.tsx  page.tsx
app/(marketing)/: HomePageContent.tsx  page.tsx
app/(marketing)/_components/: ContactSection.tsx  Hero.tsx  StatsSection.tsx
app/(marketing)/projects/: page.tsx  projects-client.tsx
app/(marketing)/projects/30-voice-ai-solution-challenge/: VoiceAIChallengeContent.tsx  data.ts  page.tsx
app/(marketing)/projects/30-voice-ai-solution-challenge/_components/: ProjectCTA.tsx  SolutionCard.tsx
app/_components/common/: MarkdownModal.tsx
app/_components/layouts/: Navigation.tsx
app/api/chat/: route.ts
app/chat/: layout.tsx
app/projects/: page.tsx  projects-client.tsx
app/projects/30-voice-ai-solution-challenge/: VoiceAIChallengeContent.tsx  data.ts  page.tsx
app/test-api/: page.tsx
components/chat/: chat.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  overview.tsx
data/: achievement-stats.ts  projects.ts  suggested-actions.json
docs/: browser-fingerprint-implementation.md
docs/staging/system-prompt-design/: jail-break-test-case.md
genai/codebase/: generate_knowledge_base.py
genai/confluence/: generate_knowledge_base.py
lib/: constants.ts
lib/seo/: config.ts  generateMetadata.ts  types.ts
sanhe_me/: _version.py  boto_ses.py  config.py  constants.py  env.py  instruction.md  knowledge-base.md  paths.py  runtime.py
sanhe_me/config/: api.py  config_00_main.py
sanhe_me/one/: one_00_main.py  one_01_bsm.py  one_02_config.py
