# ==============================================================================
# The [project] table defined by Official python.org
#
# Read: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# ==============================================================================
[project]
name = "sanhe_me"
# Increment version before each release - follow `semantic versioning <https://semver.org/>`_
# Currently, poetry 2.1.X doesn't support dynamic versioning
# (Read https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#version)
# So this value has to be aligned with the one in ``sanhe_me/_version.py``
version = "0.1.1"
description = ""
# Read https://dev-exp-share.readthedocs.io/en/latest/search.html?q=Pick+An+Open+Source+License+For+Python+Project&check_keywords=yes&area=default
# To pick a license and update the ``license``, ``classifier`` field in ``pyproject.toml``
# And also update the ``LICENSE.txt`` file in the git repo.
license = "MIT"
license-files = ["LICENSE.txt", "AUTHORS.rst"]
authors = [
    { name = "Sanhe Hu", email = "husanhe@email.com" },
]
maintainers = [
    { name = "Sanhe Hu", email = "husanhe@email.com" },
]
keywords = []
readme = "README.rst"
requires-python = ">=3.12,<3.13"
# Full list of classifiers: https://pypi.org/classifiers/
classifier = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    # Note: classfier like "Programming Language :: Python :: 3 :: Only",
    # "Programming Language :: Python :: 3.X" is no longer needed,
    # because we have ``requires-python`` field.
]

# ------------------------------------------------------------------------------
# Core Dependencies
# ------------------------------------------------------------------------------
dependencies = [
    # Zero-dependency packages
    "vislog>=0.1.2,<1.0.0", # Visual logging for Python
    "func-args>=1.0.1,<2.0.0", # inspect function/method arguments
    "soft_deps>=0.1.1,<1.0.0", # Lazy import optional dependencies
    "boltons>=25.0.0,<26.0.0", # Utility functions for Python
    # AWS SDK
    "boto3>=1.35.99,<2.0.0", # Official AWS Python SDK
    "boto3-dataclass[bedrock-runtime]>=1.40.0,<2.0.0", # Transform boto3 dictionaries into type-safe dataclasses with full autocomplete support.
    "boto-session-manager>=1.8.1,<2.0.0",
    "aws_console_url>=1.4.1,<2.0.0", # Generate AWS Console URL for resources
    "s3pathlib>=2.3.6,<3.0.0", # A pathlib-style object-oriented wrapper for Amazon S3
    "s3vectorm>=0.1.1,<1.0.0", # sanhe_me client
    # DevOps utils
    "which_env>=0.2.1,<1.0.0", # Multiple environment management
    "which_runtime>=0.1.1,<1.0.0", # Multiple Runtime management
    "which_bsm>=0.1.1,<1.0.0", # Multiple BSM management
    # Config management
    "aws_config>=0.1.4,<1.0.0", # Type-safe hierarchical configuration management system for AWS projects
    # FastAPI
    "pydantic>=2.11.0,<3.0.0",
    "fastapi>=0.118.0,<1.0.0",
    "fastapi-cli==0.0.13",
    # AI SDK
    "vercel_ai_sdk_mate>=5.0.1,<6.0.0", # Vercel AI SDK Python adaptor library
    # Http client
    "httpx>=0.28.0,<1.0.0",
    "requests>=2.32.3,<3.0.0",
    # Template engine
    "Jinja2>=3.1.4,<4.0.0",
    # Seder
    "PyYAML>=6.0.1,<7.0.0",
    # Developer Tools
    "python-dotenv>=1.0.1,<2.0.0",
    # Others
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "email_validator==2.2.0",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.1",
    "idna==3.7",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.5",
    "mdurl==0.1.2",
    "openai==1.37.1",
    "Pygments==2.18.0",
    "python-multipart==0.0.9",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
#    "tqdm==4.66.4",
#    "uvicorn==0.30.3",
#    "uvloop==0.19.0",
    "watchfiles==0.22.0",
    "websockets==12.0",
]

# ------------------------------------------------------------------------------
# Optional dependency that can be used in ``pip install ${your_project_name}[${feature_name}]``
# Sometime this is also called "extras"
# Read: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-optional-dependencies
#
# IMPORTANT: all optional dependencies has to be compatible with the "requires-python" field
# ------------------------------------------------------------------------------
[project.optional-dependencies]

# ------------------------------------------------------------------------------
# Local Development dependenceies
# ------------------------------------------------------------------------------
dev = [
    "twine>=6.0.0,<7.0.0", # distribute package to PyPI
    "wheel>=0.45.0,<1.0.0", # build wheel package
    "build>=1.2.1,<2.0.0", # build source distribution
]

# ------------------------------------------------------------------------------
# (Unit/Coverage/Integration/Load) Test dependenceies
# ------------------------------------------------------------------------------
test = [
    "pytest>=8.2.2,<9.0.0", # Testing framework
    "pytest-cov>=6.0.0,<7.0.0", # Coverage reporting
]

# ------------------------------------------------------------------------------
# Documentation build dependenceies
# ------------------------------------------------------------------------------
doc = [
    "Sphinx>=7.4.7,<8.0.0",
    "sphinx-copybutton>=0.5.2,<1.0.0", # add copy button to code block
    "sphinx-design>=0.6.1,<1.0.0", # add additional design pattern to sphinx
    "sphinx-jinja>=2.0.2,<3.0.0", # enable jinja syntax in reStructuredText
    "furo==2024.8.6", # the furo sphinx theme
    "pygments>=2.18.0,<3.0.0", # syntax highlight
    "ipython>=8.18.1,<8.19.0", # interactive Python
    "nbsphinx>=0.8.12,<1.0.0", # add jupyter notebook in sphinx doc
    "rstobj==1.2.1", # generate reStructuredText from Python code
    "docfly==3.0.0", # automaticall generate .. toctree directives and API reference doc
]

# ------------------------------------------------------------------------------
# Automation (devops) dependenceies
# ------------------------------------------------------------------------------
auto = [
]

# Quick Links
[project.urls]
Homepage = "https://github.com/MacHu-GWU/sanhe_me-project"
Documentation = "https://sanhe_me.readthedocs.io/en/latest/"
Repository = "https://github.com/MacHu-GWU/sanhe_me-project"
Issues = "https://github.com/MacHu-GWU/sanhe_me-project/issues"
Changelog = "https://github.com/MacHu-GWU/sanhe_me-project/blob/main/release-history.rst"
Download = "https://pypi.org/pypi/sanhe_me#files"

# For command line interface, read: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#creating-executable-scripts
[project.scripts]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0,<2.0.0"

[tool.poetry]
# Files to include in the package distribution
packages = [
    { include = "sanhe_me", from = ".", to = "." }
]
# Files to exclude from the package
exclude = [
    "sanhe_me/tests/*",
    "sanhe_me/docs/*",
    "**/*.pyc",
    "**/*.pyo",
]

# python workflow tool config
[tool.pywf]
# The specific python version you use for local development
dev_python = "3.12.11"
# --- github.com
github_account = "MacHu-GWU"
# Create GitHub token in https://github.com/settings/tokens and put the token in
# ``${HOME}/home_secret.json``
github_token_field = "providers.github.accounts.sh.users.sh.secrets.dev.value"
# --- codecov.io (for code coverage test report)
codecov_account = "MacHu-GWU"
# Create Codecov token in https://app.codecov.io/account/gh/${codecov_account}/access
# and put the token in ``${HOME}/home_secret.json``
codecov_token_field = "providers.codecov_io.accounts.sh.users.sh.secrets.dev.value"
# --- readthedocs.org (for documentation hosting)
# Create Readthedocs token in https://app.readthedocs.org/accounts/tokens/
# and put the token at ``${HOME}/home_secret.json``
readthedocs_token_field = "providers.readthedocs.accounts.sh.users.sh.secrets.dev.value"
# Readthedocs project name, usually it is the same as your project name
readthedocs_project_name = "sanhe_me"

# Read: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#declaring-the-build-backend
[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
